<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_menu_share"
            android:title="サイト追加" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="表示件数設定" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_manage"
            android:title="更新確認タイミング設定" />
    </group>
</menu>
