...
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:checkedButton="@={viewModel.radioChecked}"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/displaycountLabel">

        <RadioButton
            android:id="@+id/Radio10Count"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="10件" />
...
